# RobotyMobilne

./: README.md  symulacja.txt
ObstacleAvoid/: avoid_obstacle.py
ObstacleAvoid/sim_ws/devel/: .catkin  .rosinstall  setup.sh
ObstacleAvoid/sim_ws/src/motion_plan/: package.xml
ObstacleAvoid/sim_ws/src/motion_plan/scripts/: avoid_obstacle.py  line_follower.py
ObstacleAvoid/sim_ws/src/robot_sim/: package.xml
ObstacleAvoid/sim_ws/src/robot_sim/models/rm3_model/: model.sdf
linefollower/src/motion_plan/scripts/: control_robot.py  line_follower.py
linefollower/src/robot_sim/: CMakeLists.txt  package.xml
linefollower/src/robot_sim/launch/: robot_world.launch
linefollower/src/robot_sim/models/rm3_model/: model.sdf
linefollower/src/robot_sim/world/: robot_world.world
motion_plan/: CMakeLists.txt  package.xml
polaczone/sim_ws/src/motion_plan/: package.xml
polaczone/sim_ws/src/motion_plan/scripts/: linefollower_omijanieprzeszkod.py
polaczone/sim_ws/src/robot_sim/models/rm3_model/: model.sdf
polaczone/sim_ws/src/robot_sim/world/: robot_world.world
rm_robot/: model.sdf
robot_sim/: package.xml
robot_sim/launch/: spawn_rm3_robot.launch
robot_sim/models/rm_3_robot/: model.config  model.sdf
world/ExampleMap/: model.config  model.sdf
